--- a/index.html
+++ b/index.html
@@ -144,6 +144,10 @@
         </div>
     </div>
     <script src="js/libs/nprogress.js"></script>
+    <script src="js/libs/jquery-1.12.3.min.js"></script>
+    <script src="js/libs/underscore-min.js"></script>
+    <script src="js/libs/backbone-min.js"></script>
+    <script src="js/main.js"></script>
     <script>
         (function (i, s, o, g, r, a, m) {
             i['GoogleAnalyticsObject'] = r;
