--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                                 </div>
                             </div>
                             <div class="col-xs-6">
-                                <textarea class="form-control textarea" id="txtStory"></textarea>
+                                <textarea class="form-control textarea" id="txtStory" style="height:200px"></textarea>
                             </div>
                         </div>
                     </div>
@@ -118,7 +118,7 @@
                                 <ul id="divCutinJP" style="padding: 5px 30px;"></ul>
                             </div>
                             <div class="col-xs-6">
-                                <textarea class="form-control textarea" rows="5" id="txtCutin"></textarea>
+                                <textarea class="form-control textarea" rows="5" id="txtCutin" style="height:120px"></textarea>
                             </div>
                         </div>
                     </div>
@@ -135,7 +135,7 @@
                                 </div>
                             </div>
                             <div class="col-xs-6">
-                                <textarea class="form-control textarea" rows="3" id="txtAccessoryDetail"></textarea>
+                                <textarea class="form-control textarea" rows="3" id="txtAccessoryDetail" style="height:100px"></textarea>
                             </div>
                         </div>
                     </div>
